# azure-iac-checker

./: .gitignore  .iac-checker.yaml  README.md  pyproject.toml  requirements.txt
examples/compliant/: compliance-report.md  main.bicep  main.json  main.tf
examples/non-compliant/: compliance-report.md  main.bicep  main.json  main.tf
src/iac_checker/: __init__.py  __main__.py  cli.py
src/iac_checker/config/: __init__.py  defaults.py  loader.py
src/iac_checker/models/: __init__.py  enums.py  finding.py  resource.py
src/iac_checker/parser/: __init__.py  base_parser.py  parsed_file.py  resource_index.py  scanner.py
src/iac_checker/parser/arm/: __init__.py  arm_parser.py  property_mapper.py  type_mapper.py
src/iac_checker/parser/bicep/: __init__.py  bicep_parser.py
src/iac_checker/parser/terraform/: __init__.py  hcl_parser.py
src/iac_checker/reporters/: __init__.py  base_reporter.py  markdown_reporter.py
src/iac_checker/rules/: __init__.py  base_rule.py  engine.py  registry.py
src/iac_checker/rules/caf/: __init__.py  (+8 more)
src/iac_checker/utils/: __init__.py  naming_validator.py  secret_detector.py
tests/: conftest.py  test_arm_parser.py  test_arm_rules.py  test_bicep_parser.py  test_bicep_rules.py  test_config.py  test_integration.py  test_models.py  test_naming_validator.py  test_new_rules.py  test_reporter.py  test_rules.py  test_scanner.py  test_secret_detector.py
tests/fixtures/arm/: compliant.json  non_compliant.json
tests/fixtures/bicep/: compliant.bicep
tests/fixtures/invalid_terraform/: main.tf
tests/fixtures/valid_terraform/: main.tf
(+19 files in other folders)
